@@ -1,5 +1,6 @@
-Alpha 4.2.3
+Alpha 4.2.3 - 24th November 2020
 
+- Fixed a crash when deconstructing a wall that was not constructed
 - Fixed an issue with map generation for very small maps
 
 Alpha 4.2.2 - 23rd November 2020
